codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_tall.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

• Working (0s • esc to interrupt)

• Queued follow-up inputs
  ↳ Hello, world! 0
  ↳ Hello, world! 1
  ↳ Hello, world! 2
  ↳ Hello, world! 3
  ↳ Hello, world! 4
  ↳ Hello, world! 5
  ↳ Hello, world! 6
  ↳ Hello, world! 7
  ↳ Hello, world! 8
  ↳ Hello, world! 9
  ↳ Hello, world! 10
  ↳ Hello, world! 11
  ↳ Hello, world! 12
  ↳ Hello, world! 13
   gpt-5.6-sol default │  /tmp/project │ API key


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
